--- a/fits/.properties
+++ b/fits/.properties
@@ -1,3 +1,3 @@
-jar.class.path=../junit/junit.jar ../tamfits/tamfits.jar \
+jar.class.path=../tamfits/tamfits.jar \
 ../array/array.jar ../hdx/hdx.jar ../ndx/ndx.jar ../jniast/jniast.jar \
-../table/table.jar ../util/util.jar
+../table/table.jar 
