Now includes webstart support. Also expects jar files to be in "src/lib" so that when we sign and update the manifest the modifications are not reported (and potentially checked in to CVS)

--- a/jetty/build.xml
+++ b/jetty/build.xml
@@ -8,17 +8,16 @@
  !
  !   The main targets are:
  !
- !      build            -> does nothing
- !      clean            -> does nothing
+ !      build            -> makes copies of local files that will be modified
+ !      clean            -> removes local copies
  !      deinstall        -> undo the install target
- !      dist             -> does nothing (this package is already in
- !                          the dist state).
+ !      dist             -> makes package into dist state
  !      export           -> creates the full distribution archives
  !      export-runonly   -> same as export
  !      export-source    -> same as export
  !      install          -> install distribution into Starlink tree
  !      install-runonly  -> same as install
- !      jars             -> does nothing
+ !      jars             -> add manifest and sign jar files
  !      javadocs         -> does nothing
  !      javadoc-sources  -> does nothing
  !
@@ -83,6 +82,11 @@
 
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
+  <!-- Directory containing the package source -->
+  <property name="src.dir" value="${basedir}/src"/>
+
+  <!-- Directory containing any unmodified jars of this package -->
+  <property name="src.jars.dir" value="${src.dir}/lib"/>
 
   <!-- Distribution directories, these are the actual state of this
    !   package at all times -->
@@ -102,6 +106,18 @@
   <!-- File for logging the files that are copied by the install target -->
   <property name="install.log" value=".${name}.install"/>
   <property name="install.overwrite" value="true"/>
+
+  <!-- Local webstart properties. Note this needs a local keystore,
+   !   assumed to be called keystore in $star.build.dir, .. by
+   !   default. -->
+  <property name="webstart.codebase"
+            value="http://www.starlink.ac.uk/starjava/lib"/>
+  <property name="webstart.alias" value="Starlink-UK"/>
+  <property name="webstart.keystore" value="${star.build.dir}/keystore"/>
+  <property name="webstart.keypass" value="Vroomfondel"/>
+  <property name="webstart.storepass" value="Majikthise"/>
+  <property name="webstart.starlink_logo" value="starlink_logo_med.gif"/>
+  <property name="home.page" value="http://jetty.mortbay.org/jetty/"/>
 
   <!--
    !   =================
@@ -123,16 +139,33 @@
    !   Build the code
    !   ==============
    !
-   !  Update the jar-file manifest. Note this target should be ran
-   !  before checking in the jar files (to update the manifest) and
-   !  will need repeating if the dependencies change. For safety 
-   !  this target will be executed as part of a system "build".
+   !   Just makes local copies of the package jar files so that they
+   !   can be safely modified.
    !-->
   <target name="build"
           depends="prepare"
-          description="-> add manifest to axis jar file">
+          description="-> make local copies of files for modification">
 
-    <!-- Add the manifest to the axis.jar file, just an update -->
+    <mkdir dir="${dist.lib.pkg}"/>
+    <copy todir="${dist.lib.pkg}">
+       <fileset dir="${src.jars.dir}"/>
+    </copy>
+
+  </target>
+
+  <!--
+   !   ===========================
+   !   Create the package jar file
+   !   ===========================
+   !
+   !   This just updates the manifest and signs with using the local
+   !   keystore.
+   !-->
+  <target name="jars"
+          depends="build"
+          description="-> packages jar files">
+
+    <!-- Add the manifest to the main jar file. -->
     <mkdir dir="${dist.lib.pkg}"/>
     <jar destfile="${dist.lib.pkg}/org.mortbay.jetty.jar" basedir="${dist.dir}"
          update="true" excludes="**">
@@ -144,17 +177,48 @@
         <attribute name="Class-Path" value="${jar.class.path}"/>
       </manifest>
     </jar>
+
+    <!-- Sign all jar files -->
+    <signjar alias="${webstart.alias}"
+             keystore="${webstart.keystore}"
+             keypass="${webstart.keypass}"
+             storepass="${webstart.storepass}">
+      <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+    </signjar>
+
   </target>
 
   <!--
-   !   ===========================
-   !   Create the package jar file
-   !   ===========================
-   !
-   !  Nothing to do.
+   !   ========================================
+   !   Make package JNLP file for Java webstart
+   !   ========================================
    !-->
-  <target name="jars"
-          description="-> does nothing">
+  <target name="webstart"
+          description="-> create webstart descriptor files">
+
+    <!-- Create a webstart JNLP file for this package, this goes into
+     !   "dist.lib" -->
+    <mkdir dir="${dist.lib}"/>
+    <jnlp toFile="${dist.lib}/${name}.jnlp" href="${name}.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>Jetty://</title>
+         <vendor>Mort Bay Consulting</vendor>
+         <homepage href="${home.page}"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"Jetty:// - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+       </resources>
+       <component_desc/>
+     </jnlp>
+
   </target>
 
   <!--
@@ -165,7 +229,8 @@
    !  Nothing to do, this package is permanently in this condition.
    !-->
   <target name="dist"
-          description="-> does nothing">
+          depends="jars,webstart"
+          description="-> make package ready for distribution">
   </target>
 
   <!--
@@ -255,9 +320,9 @@
 
     </tar>
 
-    <gzip zipfile="${star.archive.dir}/${archive.name}.tar.gz" 
+    <gzip zipfile="${star.archive.dir}/${archive.name}.tar.gz"
           src="${archive.name}.tar"/>
-    <bzip2 zipfile="${star.archive.dir}/${archive.name}.tar.bz2" 
+    <bzip2 zipfile="${star.archive.dir}/${archive.name}.tar.bz2"
            src="${archive.name}.tar"/>
     <delete file="${archive.name}.tar"/>
   </target>
@@ -266,10 +331,14 @@
    !   ============================================
    !   Cleans up build and distribution directories
    !   ============================================
-   ! Does nothing.
+   !
+   !   Removes copies of jar files.
    !-->
   <target name="clean"
-          description="-> does nothing">
+          description="-> removes local copies">
+
+    <delete dir="${dist.lib}"/>
+
   </target>
 
   <!--
@@ -283,6 +352,7 @@
    ! are logged to "${install.log}".
    !-->
   <target name="install"
+          depends="dist"
           description="-> install distribution into Starlink tree">
 
     <!-- Installation based directories (based on "star.install")-->
@@ -292,8 +362,8 @@
     <property name="star.docs.pkg" value="${star.docs}/${name}"/>
 
     <mkdir dir="${star.install}"/>
-    <mkdir dir="${star.lib}"/>
-    <mkdir dir="${star.docs}"/>
+    <mkdir dir="${star.lib.pkg}"/>
+    <mkdir dir="${star.docs.pkg}"/>
 
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
@@ -348,7 +418,7 @@
 
   <!-- Real deinstall target. Only activated if "install.log.present"
    !   is defined -->
-  <target name="real_deinstall" 
+  <target name="real_deinstall"
           if="install.log.present">
 
     <loadfile property="files" srcFile="${install.log}"/>
