--- a/junit/build.xml
+++ b/junit/build.xml
@@ -8,17 +8,16 @@
  !
  !   The main targets are:
  !
- !      build            -> does nothing
- !      clean            -> does nothing
+ !      build            -> makes copies of local files that will be modified
+ !      clean            -> removes local copies
  !      deinstall        -> undo the install target
- !      dist             -> does nothing (this package is already in
- !                          the dist state).
+ !      dist             -> makes package into dist state
  !      export           -> creates the full distribution archives
  !      export-runonly   -> same as export
  !      export-source    -> same as export
  !      install          -> install distribution into Starlink tree
  !      install-runonly  -> same as install
- !      jars             -> does nothing
+ !      jars             -> add manifest and sign jar files
  !      javadocs         -> does nothing
  !      javadoc-sources  -> does nothing
  !
@@ -82,6 +81,12 @@
   <!-- Extra task options, if any -->
   <property name="chmod.fail" value="false"/>
 
+  <!-- Directory containing the package source -->
+  <property name="src.dir" value="${basedir}/src"/>
+
+  <!-- Directory containing any unmodified jars of this package -->
+  <property name="src.jars.dir" value="${src.dir}/lib"/>
+
   <!-- Distribution directories, these are the actual state of this
    !   package at all times -->
   <property name="dist.dir" value="${basedir}"/>
@@ -97,12 +102,21 @@
   <!-- Version for zipped/tarred export files. -->
   <property name="dist.version" value="${name}-${version}"/>
 
-  <!-- Source directory contains examples & testcases -->
-  <property name="src.dir" value="${basedir}/src"/>
-
   <!-- File for logging the files that are copied by the install target -->
   <property name="install.log" value=".${name}.install"/>
   <property name="install.overwrite" value="true"/>
+
+  <!-- Local webstart properties. Note this needs a local keystore,
+   !   assumed to be called keystore in $star.build.dir, .. by
+   !   default. -->
+  <property name="webstart.codebase" 
+            value="http://www.starlink.ac.uk/starjava/lib"/>
+  <property name="webstart.alias" value="Starlink-UK"/>
+  <property name="webstart.keystore" value="${star.build.dir}/keystore"/>
+  <property name="webstart.keypass" value="Vroomfondel"/>
+  <property name="webstart.storepass" value="Majikthise"/>
+  <property name="webstart.starlink_logo" value="starlink_logo_med.gif"/>
+  <property name="home.page" value="http://junit.org"/>
 
   <!--
    !   =================
@@ -123,10 +137,19 @@
    !   ==============
    !   Build the code
    !   ==============
+   !
+   !   Just makes local copies of the package jar files so that they
+   !   can be safely modified.
    !-->
   <target name="build"
           depends="prepare"
-          description="-> does nothing">
+          description="-> make local copies of files for modification">
+
+    <mkdir dir="${dist.lib.pkg}"/>
+    <copy todir="${dist.lib.pkg}">
+       <fileset dir="${src.jars.dir}"/>
+    </copy>
+
   </target>
 
   <!--
@@ -134,10 +157,66 @@
    !   Create the package jar file
    !   ===========================
    !
-   !  Nothing to do.
+   !   This just updates the manifest and signs with using the local
+   !   keystore.
    !-->
   <target name="jars"
-          description="-> does nothing">
+          depends="build"
+          description="-> packages jar files">
+
+    <!-- Add the manifest to the main jar file, just an update -->
+    <mkdir dir="${dist.lib.pkg}"/>
+    <jar destfile="${dist.lib.pkg}/junit.jar" basedir="${dist.dir}"
+         update="true" excludes="**">
+
+      <!-- Create the manifest -->
+      <manifest>
+        <attribute name="Built-By" value="${user.name}"/>
+      </manifest>
+      
+    </jar>
+
+    <!-- Sign all jar files -->
+    <signjar alias="${webstart.alias}"
+             keystore="${webstart.keystore}"
+             keypass="${webstart.keypass}"
+             storepass="${webstart.storepass}">
+      <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+    </signjar>
+
+  </target>
+
+  <!--
+   !   ========================================
+   !   Make package JNLP file for Java webstart
+   !   ========================================
+   !-->
+  <target name="webstart"
+          description="-> create webstart descriptor files">
+
+    <!-- Create a webstart JNLP file for this package, this goes into
+     !   "dist.lib" -->
+    <mkdir dir="${dist.lib}"/>
+    <jnlp toFile="${dist.lib}/${name}.jnlp" href="${name}.jnlp"
+          codebase="${webstart.codebase}">
+      <information>
+         <title>JUNIT</title>
+         <vendor>Junit.org</vendor>
+         <homepage href="${home.page}"/>
+         <icon href="${webstart.starlink_logo}"/>
+         <description>"JUNIT - Webstart edition"</description>
+         <offline_allowed/>
+       </information>
+       <security>
+          <all_permissions/>
+       </security>
+       <resources>
+         <j2se version="1.4+"/>
+         <jar href="${name}/${name}.jar"/>
+       </resources>
+       <component_desc/>
+     </jnlp>
+
   </target>
 
   <!--
@@ -148,7 +227,8 @@
    !  Nothing to do, this package is permanently in this condition.
    !-->
   <target name="dist"
-          description="-> does nothing">
+          depends="jars,webstart"
+          description="-> make package ready for distribution">       
   </target>
 
   <!--
@@ -251,10 +331,14 @@
    !   ============================================
    !   Cleans up build and distribution directories
    !   ============================================
-   ! Does nothing.
+   !
+   !   Removes copies of jar files.
    !-->
   <target name="clean"
-          description="-> does nothing">
+          description="-> removes local copies">
+
+    <delete dir="${dist.lib}"/>
+
   </target>
 
   <!--
@@ -268,6 +352,7 @@
    ! are logged to "${install.log}".
    !-->
   <target name="install"
+          depends="dist"
           description="-> install distribution into Starlink tree">
 
     <!-- Installation based directories (based on "star.install")-->
@@ -277,8 +362,8 @@
     <property name="star.docs.pkg" value="${star.docs}/${name}"/>
 
     <mkdir dir="${star.install}"/>
-    <mkdir dir="${star.lib}"/>
-    <mkdir dir="${star.docs}"/>
+    <mkdir dir="${star.lib.pkg}"/>
+    <mkdir dir="${star.docs.pkg}"/>
 
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
