--- a/ant/build.xml
+++ b/ant/build.xml
@@ -127,6 +127,16 @@
   <!-- Version for zipped/tarred export files. -->
   <property name="dist.version" value="${name}-${version}"/>
 
+  <!-- Webstart and jar signing properties. -->
+  <property name="webstart.codebase"
+            value="http://www.starlink.ac.uk/starjava/lib"/>
+  <property name="webstart.alias" value="Starlink-UK"/>
+  <property name="webstart.keystore" value="${star.build.dir}/keystore"/>
+  <property name="webstart.keypass" value="Vroomfondel"/>
+  <property name="webstart.storepass" value="Majikthise"/>
+  <property name="webstart.starlink_logo" value="starlink_logo_med.gif"/>
+  <property name="webstart.signer" value="${user.name}"/>
+
   <!--
    !   =================
    !   Prepare the build
@@ -180,6 +190,30 @@
     </copy>
 
   </target>
+
+  <!-- 
+   !   ==================
+   !   Sign the jar files
+   !   ==================
+   ! 
+   !   Signs the jar files in lib and the installed ant.jar file.
+   !-->
+  <target name="sign_jars"
+          depends="jars"
+          description="signs jar files, post-install">
+
+    <!-- Sign all jar files in source directory and the installed ant
+     !   jar file --> 
+    <signjar alias="${webstart.alias}"
+             keystore="${webstart.keystore}"
+             keypass="${webstart.keypass}"
+             storepass="${webstart.storepass}">
+      <fileset dir="${dist.lib}" includes="**/*.jar **/*.zip"/>
+      <fileset dir="${star.jar.dir}" includes="ant.jar"/>
+    </signjar>
+
+  </target>
+
 
   <!--
    !   =================================
